fix: Correct z-index after Sticky HOC addition

--- a/src/components/Overlay/Overlay.css
+++ b/src/components/Overlay/Overlay.css
@@ -4,13 +4,10 @@
   right: 0;
   bottom: 0;
   left: 0;
+  z-index: 10;
   width: 100vw;
   height: 100vh;
   background: #3339;
-  background: radial-gradient(
-    ellipse at center,
-    #7a7a7a 0,
-    #000 100%
-  );
+  background: radial-gradient(ellipse at center, #7a7a7a 0, #000 100%);
   opacity: 0.75;
 }
